--- a/src/Components/CardDetail/CardDetail.css
+++ b/src/Components/CardDetail/CardDetail.css
@@ -174,9 +174,8 @@ p {
   color: var(--dark);
   font-weight: 700;
   font-size: 1.1rem;
-
 }
-.deleting-details{
+.deleting-details {
   margin-top: 1rem;
 }
 .deleting-data {
@@ -184,50 +183,48 @@ p {
   font-weight: 600;
   color: var(--dark);
 }
-.data{
-  padding-inline: .3rem;
+.data {
+  padding-inline: 0.3rem;
   color: var(--dark);
   font-weight: normal;
 }
-#warning-btn-section{
+#warning-btn-section {
   margin-top: 2rem;
 }
-.delete-btn{
+.delete-btn {
   width: 8rem;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
-.warning-btn{
+.warning-btn {
   width: 6rem;
   height: 2rem;
   border: none;
-  border-radius: .3rem;
+  border-radius: 0.3rem;
 }
-.no-accept{
+.no-accept {
   background-color: var(--primary);
   color: var(--light);
   width: 8rem;
 }
-.no-accpet:hover{
+.no-accpet:hover {
   background-color: var(--primary-hover);
   cursor: pointer;
 }
-.accept{
+.accept {
   background-color: var(--danger);
   border: none;
   color: var(--light);
 }
-.accept:hover{
+.accept:hover {
   background-color: var(--danger-hover);
   cursor: pointer;
-  
 }
 
-
-.delete-update-box{
+.delete-update-box {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   width: 15vw;
   height: 10rem;
   background-color: var(--primary);
@@ -235,42 +232,39 @@ p {
   color: var(--light);
 }
 
-
-@media screen and (max-width:768px) {
-  .detail-card{
+@media screen and (max-width: 768px) {
+  .detail-card {
     width: 80vw;
-    height: 80vh;
+    height: 75vh;
   }
-  .warning-box{
+  .warning-box {
     width: 70vw;
     height: fit-content;
   }
-  .warning{
+  .warning {
     font-size: 1.1rem;
     text-align: center;
   }
-  .deleting-data{
-    font-size: .9rem
+  .deleting-data {
+    font-size: 0.9rem;
   }
-  .delete-update-box{
+  .delete-update-box {
     width: 15vw;
   }
- 
-  .card-detail-bg{
+
+  .card-detail-bg {
     background-color: rgba(97, 97, 98, 0.5);
   }
-
 }
 
-@media screen and (max-width:600px) {
-
-  .detail-card{
-    height: 90vh;
+@media screen and (max-width: 600px) {
+  .detail-card {
+    height: 80vh;
   }
-  .dep{
+  .dep {
     grid-template-columns: 1fr;
   }
-  .top-summary{
+  .top-summary {
     flex-direction: column;
     height: fit-content;
     justify-content: center;
@@ -279,22 +273,23 @@ p {
     gap: 1rem;
     margin-bottom: 1rem;
   }
-  .summary{
+  .summary {
     gap: 1rem;
-    font-size: .8rem;
-    padding: .5rem;
+    font-size: 0.8rem;
+    padding: 0.5rem;
   }
-  .img-id-section{
-    width:6rem;
+  .img-id-section {
+    width: 6rem;
   }
-  .button-section{
+  .button-section {
     flex-direction: column;
-    margin-top: 1rem;
+    margin-top: .6rem;
   }
-  .label,p{
-    font-size: .9rem;
+  .label,
+  p {
+    font-size: 0.9rem;
   }
-  .bottom-details{
+  .bottom-details {
     height: 35rem;
   }
 }
