--- a/src/Components/InputFrom/InputForm.css
+++ b/src/Components/InputFrom/InputForm.css
@@ -42,60 +42,58 @@
 .title {
   text-align: center;
   background-color: var(--primary);
-  font-size:1.6rem;
+  font-size: 1.6rem;
   color: var(--light);
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 3rem;
-  border-radius: .4rem;
+  border-radius: 0.4rem;
 }
-.subtitle{
+.subtitle {
   font-size: 1.1rem;
   color: var(--light);
   line-height: 2rem;
   padding-left: 1rem;
   background-color: var(--secondary);
-  
-  border-radius: .3rem;
+
+  border-radius: 0.3rem;
   font-weight: 700;
 }
-form{
+form {
   height: 85%;
   /* background-color: green; */
   width: 100%;
   overflow-y: auto;
-  border-radius: .4rem;
+  border-radius: 0.4rem;
   background-color: var(--light);
   padding: 1rem;
 }
-.panner{
+.panner {
   height: fit-content;
-  padding:.8rem ;
+  padding: 0.8rem;
 }
 .form-section {
   display: grid;
-  grid-template-columns: 1fr 1fr ;
+  grid-template-columns: 1fr 1fr;
   width: 100%;
   /* height: 20rem; */
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   padding: 1rem;
   gap: 1rem;
-  
-  
+
   /* padding: .5rem; */
 }
-.label{
+.label {
   display: inline-block;
-  font-size:.8rem ;
+  font-size: 0.8rem;
   color: var(--dark);
-  margin-bottom:  .3rem;
-
+  margin-bottom: 0.3rem;
 }
-.input-field{
+.input-field {
   display: block;
-  padding-inline: .3rem;
+  padding-inline: 0.3rem;
 }
 
 hr {
@@ -106,10 +104,9 @@ hr {
   /* width: 90%; */
   height: fit-content;
 }
-select  option{
+select option {
   height: 6rem;
   position: absolute;
-  
 }
 .input-field,
 select {
@@ -154,10 +151,10 @@ select {
   height: 2.5rem;
   width: 12rem;
 }
-#clear-btn{
+#clear-btn {
   background-color: var(--gray);
 }
-.button-section{
+.button-section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -166,29 +163,24 @@ select {
   /* background-color: green; */
 }
 
-
-@media  screen and (max-width:1024px) {
-
-  .input-card{
+@media screen and (max-width: 1024px) {
+  .input-card {
     width: 80vw;
-    height: 80vh;
+    height: 75vh;
   }
-  
 }
 
-@media  screen and (max-width:768px) {
-  .input-card{
-
+@media screen and (max-width: 768px) {
+  .input-card {
   }
-  .form-section{
+  .form-section {
     grid-template-columns: 1fr;
   }
-  .title{
+  .title {
     font-size: 3.3vw;
   }
-  .input-field, select{
-
+  .input-field,
+  select {
     height: 2rem;
   }
-  
 }
